service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-service
spec:
  type: LoadBalancer
  selector:
    app: hello-application  # This should match the label in your deployment.
  ports:
    - protocol: TCP
      port: 80        # Port exposed externally.
      targetPort: 3000 # Port that the application listens on inside the pod.
